# FinTrack

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml  push_img.yml  testes.yml
app/Interface/: index.html  scripts.js  style.css
app/banco/: banco.db  database.py
tests/: conftest.py  test_database.py
