[project]
name = "fintrack"
version = "0.1.0"
description = ""
authors = [
    {name = "santana",email = "sannt11na@sempreceub.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "fastapi (==0.135.1)",
    "greenlet (==3.3.2)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "sqlalchemy (==2.0.48)",
    "starlette (==0.52.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.42.0)"
]

[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
